# boxmot

./: README.md  pyproject.toml
boxmot/trackers/boosttrack/: boosttrack.py
